--- a/config/dev.env
+++ b/config/dev.env
@@ -1,5 +1,6 @@
 PORT=3000
-MONGODB_URL='mongodb://127.0.0.1:27017/match-reservation-db'
+#MONGODB_URL='mongodb://127.0.0.1:27017/match-reservation-db'
+MONGODB_URL='mongodb+srv://sebak:sebak@match-reservation-syste.wwpd3.mongodb.net/match-reservation-db?retryWrites=true&w=majority'
 JWT_SECRET='dSn2`LTYJ5ne</\6"4-,ML^75<wDa}<w'
 Adminstrator_email='ahmed.edakrory@gmail.com'
 Adminstrator_password='wsjk86/*-kajs`?'
