--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js -e js,json",
-    "test": "env-cmd -f ./config/dev.env jest --colors --coverage"
+    "test": "env-cmd -f ./config/test.env jest --colors --coverage"
   },
   "jest": {
     "testEnvironment": "node"
