--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env node src/index.js -e js,json",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js -e js,json",
     "test": "env-cmd -f ./config/test.env jest --colors --coverage --runInBand"
   },
   "jest": {
@@ -22,13 +22,14 @@
     "mongoose": "^5.11.8",
     "run-rs": "^0.7.4",
     "run-s": "^0.0.0",
+    "socket.io": "^4.0.1",
     "validator": "^13.5.2",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.7",
     "supertest": "^6.0.1"
   }
 }
